--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <body>
   <h1>Claudia PD</h1>
   <p>Bienvenidos</p>
+  <h2>Things you should know about myself</h2>
+  <ol>
+    <li>I am married to a bearded guy that I called "Fuzzy"</li>
+    <li>I have a beautify pitty named "Nena"
+    <li>I am a not yet licensed Architect</li>
+    <li>I love Bible journaling and crafting overall</li>
+  </ol>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
